# api

./: .gitignore  README.md  clear_index.py  gui.py  gui2.py  indexer.py  main.py  pyproject.toml  query.py  requirements.txt  run.py
api/: analyzer.py  colpaliexample.py  download_moondream.py  fastapi_main.py  find_files.py  gui.py  indexer.py  main.py  query.py  run.py  test_thing.py  utils.py  vibecoded.py  watcher.py
api.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
db/: chroma.sqlite3
