[project]
name = "api"
version = "0.1.0"
description = ""
authors = [
    {name = "Shubham Patil",email = "shubhampatilsd@gmail.com"},
    {name = "Ishaan Awasthi",email = "ishaanawasthi05@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12, <4.0"
dependencies = [
    "chromadb (>=0.6.3,<0.7.0)",
    "pillow (>=10.4.0,<12.0.0)",
    "transformers (>=4.21.0,<4.48.0)",
    "torch (>=2.5.1,<3.0.0)",
    "customtkinter (>=5.2.2,<6.0.0)",
    "fastapi (>=0.115.6,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "embed-anything (>=0.5.0,<0.6.0)",
    "einops (>=0.8.0,<0.9.0)",
    "pyvips (>=2.2.3,<3.0.0)",
    "pyvips-binary (>=8.16.0,<9.0.0)",
    "moondream (==0.0.5)",
    "python-docx (>=1.1.2,<2.0.0)",
    "pypdf2 (>=3.0.1,<4.0.0)",
    "chardet (>=5.2.0,<6.0.0)",
    "filetype (>=1.2.0,<2.0.0)",
    "ollama (>=0.4.7,<0.5.0)",
    "torchvision (>=0.20.1,<0.21.0)",
    "pytesseract (>=0.3.13,<0.4.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "numpy (>=2.2.2,<3.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "timm (>=1.0.14,<2.0.0)",
    "clip @ git+https://github.com/openai/CLIP.git",
    "pymupdf (>=1.25.2,<2.0.0)",
    "pdf2image (>=1.17.0,<2.0.0)",
    "python-magic>=0.4.27",
]






[tool.setuptools]
py-modules = []
